# zmind

./: .gitignore  AGENTS.md  Cargo.toml  README.md
src/: cli.rs  main.rs  mind_map.rs  store.rs  view.rs
src/mind_map/: display.rs  edit.rs  mod.rs  nav.rs  tests.rs  undo.rs
