[package]
name = "zmind"
version = "0.1.0"
edition = "2021"
description = "A Terminal User Interface (TUI) mind mapping tool"
license = "MIT OR Apache-2.0"
authors = ["zmind"]
readme = "README.md"
repository = "https://github.com/user/zmind"
keywords = ["tui", "mindmap", "terminal", "ratatui"]
categories = ["command-line-utilities"]
default-run = "zmind"

[dependencies]
dirs = "5.0.1"
ratatui = "0.27.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
tui-input = "0.9.0"
unicode-width = "0.1.14"
